	consistently.  open = "r" is now equivalent to open = "rt" for
	all connections.  The default open = "" now means "rt" for all
	connections except the compressed file connections gzfile(),
	bzfile() and xzfile() for which it means "rb".

    o	R CMD INSTALL now uses the internal untar() in package utils:
	this ensures that all platforms can install bzip2- and
	xz-compressed tarballs.

    o	help(try.all.packages = TRUE) is much faster (although the
	time taken by the OS to find all the packages the first time
	it is used can dominate the time).

    o	R CMD check has a new option '--timings' for record
	per-example timings in file <pkg>.Rcheck/<pkg>-Ex.timings.

    o	The TRE library has been updated to version 0.8.0 (minor bugfixes).

    o	grep[l], [g]sub and [g]regexpr now work in bytes in an 8-bit
	locales if there is no marked UTF-8 input string: this will be
	somewhat faster, and for [g]sub() give the result in the
	native encoding rather than in UTF-8 (which was the behaviour
	prior to R 2.10.0).

    o	A new argument 'skipCalls' has been added to browser() so that
	it can report the original context when called by other
	debugging functions.

    o	More validity checking of UTF-8 and MBCS strings is done by
	agrep() and the regular-expression matching functions.

    o	The undocumented restriction on gregexpr() to length(text) > 0
	has been removed.

    o	Package tcltk now sends strings to Tcl in UTF-8: this means
	that strings with a marked UTF-8 encoding are supported in
	non-UTF-8 locales.

    o	The graphics engine now supports rendering of raster (bitmap)
	images, though not all graphics devices can provide (full) support.
	Graphics device packages, e.g., RSvgDevice, will need
	to be reinstalled.

	There is also support in the graphics engine for capturing
	raster images from graphics devices (again not supported
	on all graphics devices).

    o	R CMD check now also checks if the package and namespace can